# Spyn

./: CMakeLists.txt  README.md  Spyn.cpp  Spyn.h
src/distributions/: Law.h  Normal.cpp  Normal.h
src/utils/: Constants.h  Wrapper.h
tests/: wrapper_test.cpp
